<resources>
    <string name="app_name">My Math Game</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_choose_game_type">Choose type of game</string>
    <string name="main_menu_range">Number range %1$d-%2$d</string>

    <string name="game_type_title_mul">Multiplication</string>
    <string name="game_type_title_div">Division</string>
    <string name="game_type_title_add">Addition</string>
    <string name="game_type_title_sub">Subtraction</string>

    <string name="game_type_label_sub">−</string>
    <string name="game_type_label_mul">×</string>
    <string name="game_type_label_div">÷</string>
    <string name="game_type_label_add">+</string>
    <string name="main_menu_range_button">Change</string>
    <string name="main_menu_cb_allow_2nd_try">Allow second try</string>

    <!-- Game Setup -->
    <string name="game_setup_title">Game Setup</string>
    <string name="game_setup_range_title">Set range</string>
    <string name="game_setup_range_from">From</string>
    <string name="game_setup_range_to">To</string>
    <string name="game_setup_positive_btn">Set</string>

    <!-- Game - AnswerIndicator -->
    <string name="game_indicator_correct_title">Correct !</string>
    <string name="game_indicator_incorrect_title">Incorrect !</string>
    <string name="game_indicator_2ndtry_title">Not right !</string>

    <string name="game_indicator_correct_msg">Well done!</string>
    <string name="game_indicator_incorrect_msg">Don\'t give up</string>
    <string name="game_indicator_2ndtry_msg">Try again</string>
</resources>
