<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/llOuter"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOperationAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_type_label_add"
                android:textSize="40sp"
                android:layout_marginRight="15dp" />

            <Button
                android:id="@+id/btnOperationSubstract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_type_label_sub"
                android:textSize="40sp" />
        </LinearLayout>

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/range_layout"
            android:id="@+id/llRangeAddSub"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOperationMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/game_type_label_mul"
                android:textSize="40sp"
                android:layout_marginRight="15dp" />

            <Button
                android:id="@+id/btnOperationDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/game_type_label_div"
                android:textSize="40sp" />
        </LinearLayout>
        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/range_layout"
            android:id="@+id/llRangeMulDiv"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/main_menu_choose_game_type"
        android:id="@+id/tvSubtitle"
        android:layout_above="@+id/llOuter"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />



    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_cb_allow_2nd_try"
        android:id="@+id/cbAllowSecondTry"
        android:layout_below="@+id/llOuter"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
